feat: add WebScraper resource and controller integration
- Add a new resource definition for `WebScraper` in the project configuration
- Introduce new API types for `WebScraper`, including specifications and status definitions
- Implement a new controller for managing `WebScraper` resources
- Create RBAC roles for `WebScraper` with editor and viewer permissions
- Update main application logic to register the `WebScraper` controller
- Add test suite for the `WebScraper` controller functionality
- Include sample configuration for a `WebScraper` resource
- Set up custom resource definitions in YAML format for Kubernetes integration
- Modify existing Kustomize files to include new CRDs and resources

Signed-off-by: Sean Zheng <blackhorseya@gmail.com>

--- a/config/rbac/webscraper_editor_role.yaml
+++ b/config/rbac/webscraper_editor_role.yaml
@@ -1,8 +1,11 @@
----
+# permissions for end users to edit webscrapers.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: manager-role
+  labels:
+    app.kubernetes.io/name: webscraper-operator
+    app.kubernetes.io/managed-by: kustomize
+  name: webscraper-editor-role
 rules:
 - apiGroups:
   - batch.seancheng.space
@@ -19,14 +22,6 @@ rules:
 - apiGroups:
   - batch.seancheng.space
   resources:
-  - webscrapers/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - batch.seancheng.space
-  resources:
   - webscrapers/status
   verbs:
   - get
-  - patch
-  - update
