feat: enhance WebScraper CRD with additional fields
- Add new fields to the WebScraperSpec including Schedule, Image, Command, Retries, ConcurrencyPolicy, and Resources
- Add new fields to the WebScraperStatus including LastRunTime and Success
- Update deepcopy functions to include the new fields in WebScraperSpec and WebScraperStatus
- Modify the CRD YAML to reflect the new structure and properties for WebScraperSpec and WebScraperStatus

Signed-off-by: Sean Zheng <blackhorseya@gmail.com>

--- a/config/crd/bases/batch.seancheng.space_webscrapers.yaml
+++ b/config/crd/bases/batch.seancheng.space_webscrapers.yaml
@@ -39,13 +39,81 @@ spec:
           spec:
             description: WebScraperSpec defines the desired state of WebScraper
             properties:
-              foo:
-                description: Foo is an example field of WebScraper. Edit webscraper_types.go
-                  to remove/update
+              command:
+                type: string
+              concurrencyPolicy:
+                type: string
+              image:
+                type: string
+              resources:
+                description: ResourceRequirements describes the compute resource requirements.
+                properties:
+                  claims:
+                    description: |-
+                      Claims lists the names of resources, defined in spec.resourceClaims,
+                      that are used by this container.
+
+
+                      This is an alpha field and requires enabling the
+                      DynamicResourceAllocation feature gate.
+
+
+                      This field is immutable. It can only be set for containers.
+                    items:
+                      description: ResourceClaim references one entry in PodSpec.ResourceClaims.
+                      properties:
+                        name:
+                          description: |-
+                            Name must match the name of one entry in pod.spec.resourceClaims of
+                            the Pod where this field is used. It makes that resource available
+                            inside a container.
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    type: array
+                    x-kubernetes-list-map-keys:
+                    - name
+                    x-kubernetes-list-type: map
+                  limits:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    description: |-
+                      Limits describes the maximum amount of compute resources allowed.
+                      More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+                    type: object
+                  requests:
+                    additionalProperties:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                      x-kubernetes-int-or-string: true
+                    description: |-
+                      Requests describes the minimum amount of compute resources required.
+                      If Requests is omitted for a container, it defaults to Limits if that is explicitly specified,
+                      otherwise to an implementation-defined value. Requests cannot exceed Limits.
+                      More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+                    type: object
+                type: object
+              retries:
+                format: int32
+                type: integer
+              schedule:
                 type: string
             type: object
           status:
             description: WebScraperStatus defines the observed state of WebScraper
+            properties:
+              lastRunTime:
+                format: date-time
+                type: string
+              success:
+                type: boolean
             type: object
         type: object
     served: true
