feat: refactor WebScraper command handling and error logging
- Change the type of the `Command` field from string to array of strings in WebScraperSpec
- Update the DeepCopyInto method to handle the new Command array type
- Modify the YAML schema to reflect the Command field as an array
- Introduce logging for error handling in the Reconcile function
- Create a new CronJob if it does not exist in the Reconcile function
- Add the Command field to the test setup for WebScraper creation

Signed-off-by: Sean Zheng <blackhorseya@gmail.com>

--- a/config/crd/bases/batch.seancheng.space_webscrapers.yaml
+++ b/config/crd/bases/batch.seancheng.space_webscrapers.yaml
@@ -40,7 +40,9 @@ spec:
             description: WebScraperSpec defines the desired state of WebScraper
             properties:
               command:
-                type: string
+                items:
+                  type: string
+                type: array
               concurrencyPolicy:
                 type: string
               image:
