chore: bump version and enhance webhook configurations
- Update the default version from 0.0.1 to 0.0.2 in the Makefile
- Add a path for CA injection in the kustomization YAML files
- Update the image tag for the web scraper operator from 0.0.1 to 0.0.2 in the manager YAML
- Add rules for managing cronjobs in the ClusterRole definition
- Add environment variable to enable webhooks in the manager configuration

Signed-off-by: Sean Zheng <blackhorseya@gmail.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,8 +63,11 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
-        image: ghcr.io/blackhorseya/webscraper-operator:0.0.1
+        image: ghcr.io/blackhorseya/webscraper-operator:0.0.2
         name: manager
+        env:
+          - name: ENABLE_WEBHOOKS
+            value: "true"
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
