--- a/config/samples/batch_v1_webscraper.yaml
+++ b/config/samples/batch_v1_webscraper.yaml
@@ -6,6 +6,17 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: webscraper-sample
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "*/1 * * * *" # 每分钟触发一次 CronJob
   image: "busybox"
-  command: [ "sh", "-c", "echo Hello, Kubernetes!" ]
+  command:
+    - sh
+    - -c
+    - |
+      while true; do
+        if [ $((RANDOM % 2)) -eq 0 ]; then
+          echo "Success";
+        else
+          echo "Failure";
+        fi
+        sleep 5;
+      done
