chore: bump version and enhance WebScraper error handling
- Update version from 0.0.2 to 0.0.4 in multiple configuration files
- Add a message field to the WebScraperStatus type
- Modify the CRD to include the new message field
- Adjust Docker build command to include a new image tag
- Update sample CronJob configuration to include retry logic
- Improve error logging for job status updates in the WebScraper reconciler

Signed-off-by: Sean Zheng <blackhorseya@gmail.com>

--- a/config/crd/bases/batch.seancheng.space_webscrapers.yaml
+++ b/config/crd/bases/batch.seancheng.space_webscrapers.yaml
@@ -114,6 +114,8 @@ spec:
               lastRunTime:
                 format: date-time
                 type: string
+              message:
+                type: string
               success:
                 type: boolean
             type: object
